--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
 }
+body {
+    background: #FBFBFB;
+}
 header{
     background: #FBFBFB;
 }
@@ -43,11 +46,11 @@ header{
 .slogan {
     float: left;
 	width: 100%;
-    height: 200px;
+    min-height: 200px;
 }
 .slogan .slogan-box {
 	height: 50%;
-    width: 840px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 } 
@@ -60,6 +63,10 @@ header{
     color: #E11F2A;
 }
 .slogan-box p{
+    display: block;
+    max-width: 840px;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 18px;
     color: #919191;
     padding: 10px 15px;
@@ -81,7 +88,7 @@ header{
     margin-bottom: -163px;
     position: relative;
     z-index: 1;
-    opacity: 0.7;
+    opacity: 0.95;
 }
 .select-box {
 	display: inline-block;
@@ -228,7 +235,75 @@ header{
     float: right;
     width: 230px;
     text-align: left;
+    font-size: 17px;
 }
+
+/*           Конец Инструкция для пользователя        */
+
+/*           Предоставляемые услуги                   */
+
+.servises {
+	width: 100%;
+    min-height: 458px;
+}
+.servises-box1 {
+    display: block;
+    overflow: hidden;
+    margin-bottom: 90px;
+}
+.servises-box1 h2 {
+	text-align: center;
+    font-size: 44px;
+    padding-top: 60px
+}
+.servises-box1 h2 span {
+    color: #e11f2a;
+}
+.servises-box1 p{
+    text-align: center;
+    font-size: 18px;
+    padding-top: 20px;
+    color: #828282;
+}
+.servises-box2,.servises-box3 {
+	display: inline-block;
+    width: 50%;
+    margin-right: -4px;
+    padding-bottom: 70px;
+    min-height: 400px;   
+    overflow: hidden;
+}
+.servises-content {
+    max-width: 440px;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+.servises-content img {
+    display: block;
+    position: absolute;
+    top 20px;
+}
+.servises-content h3 {
+	display: block;
+    font-size: 23px;
+    color: #353535;
+    margin-left: 40px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #353535;
+    float: left;
+}
+.servises-content p {
+    color: #A7A7A7;
+    font-size: 18px;
+    margin-bottom: 20px;
+    font-weight: 400;
+    font-style: italic;
+}
+.servises-box2 .servises-content {
+	 margin-left: 180px;
+} 
+
 /*                                   Footer - Подвал                                */
 
 footer {
