--- a/style.css
+++ b/style.css
@@ -102,6 +102,11 @@ header{
     overflow: hidden;
     border-radius: 6px;  
 }
+.select .select-box:last-child:hover {
+	box-shadow: 1px 1px 1px 1px #de1e29;
+    -webkit-box-shadow: 1px 1px 1px 1px #de1e29;
+    -moz-box-shadow: 1px 1px 1px 1px #de1e29;
+}
 .select-box .select-cursor {
 	display: block;
     position: absolute;
@@ -139,17 +144,24 @@ header{
     color: #fff;
     font-size: 20px;
     cursor: pointer;
-     box-shadow: 0 3px 3px 3px #de1e29;
-    -webkit-box-shadow: 0 3px 3px 3px #de1e29;
-    -moz-box-shadow: 0 3px 3px 3px #de1e29;
+     
 }
 .select-button:hover {
+    border: none;
     background: /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#de1e29+1,db6b71+45,207cca+100,207cca+100,de1e29+100&1+0,0.97+100 */
 background: -moz-linear-gradient(top,  rgba(222,30,41,1) 0%, rgba(222,30,41,1) 1%, rgba(219,107,113,0.99) 45%, rgba(222,30,41,0.97) 100%); /* FF3.6-15 */
 background: -webkit-linear-gradient(top,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', endColorstr='#f7de1e29',GradientType=0 ); /* IE6-9 */
 
+}
+.select-button:active{
+    border: none;
+    background: /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#de1e29+1,db6b71+45,207cca+100,207cca+100,de1e29+100&1+0,0.97+100 */
+background: -moz-linear-gradient(top,  rgba(222,30,41,1) 0%, rgba(222,30,41,1) 1%, rgba(219,107,113,0.99) 45%, rgba(222,30,41,0.97) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', endColorstr='#f7de1e29',GradientType=0 ); /* IE6-9 */
 }
 
 /*            Конец кнопок выбора            */
@@ -168,7 +180,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 .marker-box1  ul{
     display: block;
     float: right;
-    max-width: 661px;
+    max-width: 700px;
     list-style: none;
     padding-top: 60px;
 }
@@ -176,14 +188,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
     display: inline-block;
     margin-right: 30px;
     margin-bottom: 43px;
-    padding-left: 30px;
+    padding-left: 40px;
     position: relative;
 }
 .marker-box1  ul li img{
     display: block;
     position: absolute;
     top: -5px;
-    left: -14px;
+    left: 0px;
 }
 .marker-box1 ul li:nth-child(1) {
     width: 230px;
@@ -201,18 +213,19 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 	height: 100%;
     width: 30%;
     float: right;
+    min-width: 340px;
 }
-.marker-box2 span{
+.marker-box2 div{
     display: block;
     position: relative;
     margin-top: 94px;
 }
-.marker-box2 span img{
+.marker-box2 div img{
     display: block;
     position: absolute;
     top: -11px;
 }
-.marker-box2 span p{
+.marker-box2 div p{
     padding-left: 70px;
 }
 /*            Конец значений иконок           */
