--- a/style.css
+++ b/style.css
@@ -103,9 +103,9 @@ header{
     border-radius: 6px;  
 }
 .select .select-box:last-child:hover {
-	box-shadow: 1px 1px 1px 1px #de1e29;
-    -webkit-box-shadow: 1px 1px 1px 1px #de1e29;
-    -moz-box-shadow: 1px 1px 1px 1px #de1e29;
+	box-shadow: 1px 1px 0px 1px #de1e29;
+    -webkit-box-shadow: 1px 1px 0px 1px #de1e29;
+    -moz-box-shadow: 1px 1px 0px 1px #de1e29;
 }
 .select-box .select-cursor {
 	display: block;
@@ -327,7 +327,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 .servises-content img {
     display: block;
     position: absolute;
-    top 20px;
+    top: 0px;
 }
 .servises-content h3 {
 	display: block;
@@ -348,7 +348,76 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 .servises-box2 .servises-content {
 	 margin-left: 25%;
 } 
+/*               Конец предоставляемых услуг            */
 
+/*               Сейчас ищут                            */
+.now-search {
+	background: #F4F4F4;
+}
+.now-search h2 {
+    text-align: center;
+    font-size: 44px;
+    padding-top: 60px;
+}
+.now-search h2 span {
+    color: #e11f2a;
+}
+.now-search p {
+    text-align: center;
+    font-size: 18px;
+    padding-top: 20px;
+    color: #828282;
+    margin-bottom: 50px;
+}
+.now-search ul {
+    list-style: none;
+    font-size: 1.1em;
+    font-weight: 300;
+    margin-bottom: 50px;
+}
+.now-search ul li {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #4B4B4B;
+}
+.now-search-button {
+    max-width: 260px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 100px;
+}
+.now-search-button span {
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    font-size: 18px;
+    color: #828282;
+}
+.now-search-button1 {
+    display: block;
+    width: 260px;
+    height: 44px;
+    background: #de1e29;
+    border: 1px solid #de1e29;
+    border-radius: 6px;
+    color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+}
+.now-search-button2 {
+    display: block;
+    width: 260px;
+    height: 44px;
+    background: #FBFBFB;
+    border: 1px solid #4A74A6;
+    border-radius: 6px;
+    color: #4A74A6;
+    font-size: 20px;
+    cursor: pointer;
+    
+}
+/*               Конец Сейчас ишут                       */
 /*                                   Footer - Подвал                                */
 
 footer {
