--- a/css/style.css
+++ b/css/style.css
@@ -179,36 +179,46 @@ h2 {
     background: #848683;
     text-align: center;
     padding-top: 58px;
-    padding-bottom: 38px;
+    padding-bottom: 29px;
     letter-spacing: 30px;
-    margin-bottom: -163px;
+    margin-bottom: -166px;
     position: relative;
     z-index: 1;
-    opacity: 0.7;
+    opacity: 0.87;
 }
 .select:hover{
     opacity: 1;
 }
 .select-box {
 	display: inline-block;
-    position: relative;
-    height: 44px;
-    background: #DE1E29;
-    width: 260px;
+    position: relative;   
     overflow: hidden;
     border-radius: 6px; 
-    margin-bottom: 20px;
+    padding-bottom: 33px;
+    width: 260px;
+}
+.select-box .select-box1 {
+	height: 44px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+}
+.select-box a{
+    display: block;
+    position: absolute;
+    color: #fff;
+    letter-spacing: normal;
+    left: 65px;
+    bottom: 0;
+}
+.select-box a:hover {
+    text-decoration: underline ;
 }
 .select-box select option {
     padding-left: 10px;
     color: #848683;
 }
-.select .select-box:last-child:hover {
-	 box-shadow: 1px 1px 0px 1px #812c30;
-    -webkit-box-shadow: 1px 1px 0px 1px #812c30;
-    -moz-box-shadow: 1px 1px 0px 1px #812c30;
-    -ms-box-shadow: 1px 1px 0px 1px #812c30;
-    -o-box-shadow: 1px 1px 0px 1px #812c30;   
+.select .select-box:last-child {
+	width: 263px;
 }
 .select-cursor {
 	display: block;
@@ -246,14 +256,15 @@ h2 {
 }
 .select-button {
     display: block;
-	width: 100%;
-    height: 100%;
+	width: 260px;
+    height: 44px;
     background: #de1e29;
     border: 1px solid #de1e29;
     color: #fff;
     font-size: 20px;
     cursor: pointer;
     outline: none;
+    border-radius: 6px;
 }
 .select-button:hover {
    background: /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#de1e29+1,db6b71+45,207cca+100,207cca+100,de1e29+100&1+0,0.97+100 */
@@ -261,6 +272,12 @@ background: -moz-linear-gradient(top,  rgba(222,30,41,1) 0%, rgba(222,30,41,1) 1
 background: -webkit-linear-gradient(top,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* Chrome10-25,Safari5.1-6 */
 background: linear-gradient(to bottom,  rgba(222,30,41,1) 0%,rgba(222,30,41,1) 1%,rgba(219,107,113,0.99) 45%,rgba(222,30,41,0.97) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', endColorstr='#f7de1e29',GradientType=0 ); /* IE6-9 */
+    
+    box-shadow: 1px 1px 0px 1px #812c30;
+    -webkit-box-shadow: 1px 1px 0px 1px #812c30;
+    -moz-box-shadow: 1px 1px 0px 1px #812c30;
+    -ms-box-shadow: 1px 1px 0px 1px #812c30;
+    -o-box-shadow: 1px 1px 0px 1px #812c30;  
 }
 .select-button:active{
     border: none;
@@ -354,9 +371,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 	width: 100%;
 }
 .instruction-box2 .instruction-note {
-	width: 33.3%;
     min-width: 300px;
-    display: inline-block;
     text-align: center;
     color: #7B7B7B;
     padding-top: 100px;
@@ -366,11 +381,20 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 .istruction-content{
     display: inline-block;
     max-width: 300px;
+    padding-bottom: 85px;
+}
+.istruction-content img {
+    width: 131px;
+    height: 142px;
+    display: block;
+    float: left;
+    margin-left: 21%;
 }
 .instruction-note span {    
-    font-size: 80px; 
-    line-height: 60px;
+    font-size: 100px; 
+    line-height: 88px;
     margin-right: 10px;
+    font-family: "Roboto thin", sans-serif;
 }
 .instruction-note p {
 	display: block;
@@ -378,6 +402,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
     width: 230px;
     text-align: left;
     font-size: 17px;
+    min-height: 72px;
+    margin-bottom: 46px;
+    font-family: "Roboto light", sans-serif;
+    color: #494949;
 }
 
 /*     //////////////////      Конец Инструкция для пользователя   //////////////     */
@@ -387,6 +415,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 .servises {
 	width: 100%;
     min-height: 458px;
+    padding: 0 15px;
 }
 .servises-box1 {
     display: block;
@@ -519,7 +548,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
     border: 1px solid #de1e29;
     border-radius: 6px;
     color: #fff;
-    font-size: 21px;
+    font-size: 23px;
     outline: none;
     font-family: eurofurence;
     font-weight: 700;
@@ -543,7 +572,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
     border: 1px solid #4A74A6;
     border-radius: 6px;
     color: #4A74A6;
-    font-size: 20px;
+    font-size: 16px;
     cursor: pointer;
     outline: none;
 }
@@ -637,11 +666,12 @@ footer {
     border-radius: 50%;
 }
 .copyright {
-	height: 50px;
+	min-height: 50px;
     width: 90%;
     border-top:  1px solid #585858;
     margin-left: auto;
     margin-right: auto;
+    padding-bottom: 5px;
 }
 .copyright p{
     color: #585858;
