--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,8 @@ h1 {
     font-family: eurofurence;
 }
 h6{
-    font-size: 14px;
+    font-size: 12px;
+    font-weight: 600;
 }
 h2 {
     font-weight: 500;
@@ -238,20 +239,18 @@ h2 {
     height: 100%;
     padding-left: 20px;
     background: #fbfbfb;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 700;
     cursor: pointer;
-    letter-spacing: 2px;
     border-radius: 7px;
 }
 .select-work {
     width: 107%;
     height: 100%;
     padding-left: 20px;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 700;
     cursor: pointer;
-    letter-spacing: 2px;
     border-radius: 7px;
 }
 .select-button {
@@ -262,6 +261,7 @@ h2 {
     border: 1px solid #de1e29;
     color: #fff;
     font-size: 20px;
+    font-weight: 600;
     cursor: pointer;
     outline: none;
     border-radius: 6px;
@@ -291,24 +291,24 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
 /*    ///////////////////////        Значения иконок       ///////////////         */
 
 .marker {
-	min-height: 204px;
     background: #FBFBFB;
+    overflow: hidden;
 }
 .marker-box1 {
-	height: 100%;
+    overflow: hidden;
 }
 .marker-box1  ul{
     display: block;
-    float: right;
-    max-width: 700px;
+    max-width: 1000px;
     list-style: none;
     padding-top: 60px;
     padding-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
 }
 .marker-box1  ul li {
-    display: inline-block;
-    margin-right: 30px;
-    margin-bottom: 43px;
+    margin-bottom: 29px;
     padding-left: 40px;
     position: relative;
 }
@@ -318,32 +318,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
     top: -5px;
     left: 0px;
 }
-.marker-box1 ul li:nth-child(3n+1) {
-    width: 230px;
-}
-.marker-box1 ul li:nth-child(3n+2){
-    width: 130px;
-}
-.marker-box2 {
-	height: 100%;
-    width: 30%;
-    float: right;
-    min-width: 340px;
-    overflow: hidden;
-}
-.marker-box2 div{
-    display: block;
-    position: relative;
-    margin-top: 94px;
-}
-.marker-box2 div img{
-    display: block;
-    position: absolute;
+.marker-box1  ul li:last-child img {
     top: -11px;
+    left: -8px;
 }
-.marker-box2 div p{
-    padding-left: 70px;
-}
+
 /*     ///////////////////////       Конец значений иконок      //////////////////     */
 
 /*      //////////////////////      Инструкция для пользователя  //////////////////   */
@@ -461,11 +440,12 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de1e29', end
     float: left;
 }
 .servises-content p {
-    color: #A7A7A7;
+    color: #5D5D5D;
     font-size: 16px;
     margin-bottom: 20px;
-    font-weight: 400;
+    font-weight: 600;
     font-style: italic;
+    font-family: "Roboto light", sans-serif;
     padding-left: 40px;
     padding-top: 10px;
     background: url(../images/for-avtovladel.jpg) no-repeat 0px 1px;
@@ -601,16 +581,21 @@ footer {
     margin-top: 50px;
     margin-bottom: 15px;
 }
+.footer-box1 .self-room {
+    margin-top: 25px;
+}
 .footer-box1 .footer-content{ 
-    vertical-align: top;
+    
     min-width: 200px;
 }
 
 .footer-content ul {
-    list-style: none;
-    line-height: 20px;
+    list-style: none;  
 }
-.footer-content:first-child ul li:nth-child(4){
+.footer-content ul li a {
+    font-size: 13px;
+}
+.footer-content:first-child ul li:nth-child(3){
     margin-bottom: 15px;
 }
 .footer-content:nth-child(2) ul li:nth-child(2){
@@ -650,7 +635,7 @@ footer {
 .footer-box2 .qwestion img{
     display: block;
     position: absolute;
-    top: -0px;
+    top: 8px;
     left: 4px;
 }
 .footer-box2 ul {
@@ -660,7 +645,7 @@ footer {
 }
 .footer-box2 ul li{
     display: inline-block;
-    padding-right: 5px;
+    padding-right: 17px;
 }
 .footer-box2 ul li a img{
     border-radius: 50%;
